add JsCompile Task, .gitignore PHPStorm files

--- a/classes/phing/tasks/defaults.properties
+++ b/classes/phing/tasks/defaults.properties
@@ -147,3 +147,7 @@ liquibase-rollback=phing.tasks.ext.liquibase.LiquibaseRollbackTask
 liquibase-tag=phing.tasks.ext.liquibase.LiquibaseTagTask
 liquibase-update=phing.tasks.ext.liquibase.LiquibaseUpdateTask
 growlnotify=phing.tasks.ext.GrowlNotifyTask
+
+
+; NeptunIDE
+jsCompile=phing.tasks.ext.neptunide.JsCompileTask
