Supprot for bzrCommit tasks, various fixes after testing

--- a/classes/phing/tasks/defaults.properties
+++ b/classes/phing/tasks/defaults.properties
@@ -151,3 +151,5 @@ growlnotify=phing.tasks.ext.GrowlNotifyTask
 
 ; NeptunIDE
 jsCompile=phing.tasks.ext.neptunide.JsCompileTask
+bzrMerge=phing.tasks.ext.neptunide.BzrMergeTask
+bzrCommit=phing.tasks.ext.neptunide.BzrCommitTask
