BzrRevert task + minor improvements

--- a/classes/phing/tasks/defaults.properties
+++ b/classes/phing/tasks/defaults.properties
@@ -153,3 +153,4 @@ growlnotify=phing.tasks.ext.GrowlNotifyTask
 jsCompile=phing.tasks.ext.neptunide.JsCompileTask
 bzrMerge=phing.tasks.ext.neptunide.BzrMergeTask
 bzrCommit=phing.tasks.ext.neptunide.BzrCommitTask
+bzrRevert=phing.tasks.ext.neptunide.BzrRevertTask
