Add bzrResolve task

--- a/classes/phing/tasks/defaults.properties
+++ b/classes/phing/tasks/defaults.properties
@@ -154,3 +154,4 @@ jsCompile=phing.tasks.ext.neptunide.JsCompileTask
 bzrMerge=phing.tasks.ext.neptunide.BzrMergeTask
 bzrCommit=phing.tasks.ext.neptunide.BzrCommitTask
 bzrRevert=phing.tasks.ext.neptunide.BzrRevertTask
+bzrResolve=phing.tasks.ext.neptunide.BzrResolveTask
